<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/abel"
        android:text="@string/settings_title"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close_36dp" />

    <TextView
        android:id="@+id/playGamesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/abel"
        android:gravity="center"
        android:text="@string/play_sign_out_text"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/playGamesButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/playGamesButton" />

    <Button
        android:id="@+id/playGamesButton"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/teko"
        android:includeFontPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/play_sign_out_button"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTitle" />

    <TextView
        android:id="@+id/privacySettingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/abel"
        android:gravity="center"
        android:text="@string/privacy_settings_text"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/privacySettingsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/privacySettingsButton" />

    <Button
        android:id="@+id/privacySettingsButton"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/teko"
        android:includeFontPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/privacy_settings_button"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playGamesButton" />

    <TextView
        android:id="@+id/bugReportText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/abel"
        android:gravity="center"
        android:text="@string/bug_report_text"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/bugReportButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bugReportButton" />

    <Button
        android:id="@+id/bugReportButton"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/teko"
        android:includeFontPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/bug_report_button"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privacySettingsButton" />

    <TextView
        android:id="@+id/privacyPolicyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/abel"
        android:gravity="center"
        android:text="@string/privacy_policy_text"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/privacyPolicyButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/privacyPolicyButton" />

    <Button
        android:id="@+id/privacyPolicyButton"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/teko"
        android:includeFontPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/privacy_policy_button"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bugReportButton" />

    <TextView
        android:id="@+id/settingsReviewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/abel"
        android:gravity="center"
        android:text="@string/settings_review_text"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/settingsReviewButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settingsReviewButton" />

    <Button
        android:id="@+id/settingsReviewButton"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/teko"
        android:includeFontPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/review_button"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privacyPolicyButton" />

</androidx.constraintlayout.widget.ConstraintLayout>